[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/theme/theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/PlayerInfoPanel.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/robot.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/sRobotHead.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/sRobotArm.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/sRobotBody.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/sRobotLeg.png" type="Texture" id=7]
[ext_resource path="res://assets/font/tinyFont.tres" type="DynamicFont" id=8]

[node name="PlayerInfoPanel" type="Control"]
margin_right = 100.0
margin_bottom = 84.0
rect_min_size = Vector2( 100, 70 )
script = ExtResource( 2 )

[node name="Empty" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.505882 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 2.3, 2.65, 59.54, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -20.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="vbox" type="VBoxContainer" parent="Panel/MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 96.0
margin_bottom = 60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Panel/MarginContainer/vbox"]
margin_right = 92.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
custom_fonts/font = ExtResource( 8 )
text = "Name"
align = 1
valign = 1
clip_text = true

[node name="Class" type="Label" parent="Panel/MarginContainer/vbox"]
visible = false
margin_top = 14.0
margin_right = 92.0
margin_bottom = 36.0
rect_min_size = Vector2( 0, 22 )
custom_colors/font_color = Color( 0.686275, 0.564706, 0.278431, 1 )
text = "Class
"
align = 1
autowrap = true

[node name="ClassContainer" type="HBoxContainer" parent="Panel/MarginContainer/vbox"]
margin_top = 24.0
margin_right = 92.0
margin_bottom = 48.0
alignment = 1

[node name="Left" type="Button" parent="Panel/MarginContainer/vbox/ClassContainer"]
visible = false
margin_left = 8.0
margin_right = 18.0
margin_bottom = 24.0
rect_min_size = Vector2( 10, 10 )
text = "<"

[node name="SpriteContainer" type="Control" parent="Panel/MarginContainer/vbox/ClassContainer"]
margin_left = 22.0
margin_right = 70.0
margin_bottom = 24.0
rect_min_size = Vector2( 48, 24 )

[node name="Sprite" type="Sprite" parent="Panel/MarginContainer/vbox/ClassContainer/SpriteContainer"]
position = Vector2( 22, 8 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="SRobotLeg" type="Sprite" parent="Panel/MarginContainer/vbox/ClassContainer/SpriteContainer/Sprite"]
position = Vector2( -5, 50 )
texture = ExtResource( 7 )

[node name="SRobotLeg2" type="Sprite" parent="Panel/MarginContainer/vbox/ClassContainer/SpriteContainer/Sprite"]
position = Vector2( 11, 50 )
texture = ExtResource( 7 )

[node name="SRobotArm" type="Sprite" parent="Panel/MarginContainer/vbox/ClassContainer/SpriteContainer/Sprite"]
position = Vector2( 28, 15 )
texture = ExtResource( 5 )

[node name="SRobotBody" type="Sprite" parent="Panel/MarginContainer/vbox/ClassContainer/SpriteContainer/Sprite"]
position = Vector2( -1, 30 )
texture = ExtResource( 6 )

[node name="SRobotHead" type="Sprite" parent="Panel/MarginContainer/vbox/ClassContainer/SpriteContainer/Sprite"]
position = Vector2( -2, 4 )
texture = ExtResource( 4 )

[node name="Right" type="Button" parent="Panel/MarginContainer/vbox/ClassContainer"]
visible = false
margin_left = 67.0
margin_right = 77.0
margin_bottom = 24.0
rect_min_size = Vector2( 10, 10 )
text = ">"

[connection signal="pressed" from="Panel/MarginContainer/vbox/ClassContainer/Left" to="." method="_on_Left_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/vbox/ClassContainer/Right" to="." method="_on_Right_pressed"]
